# pinentry-dms

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
plugin/: PinentryDaemon.qml  plugin.json
src/: assuan.rs  ipc.rs  main.rs
